new test cod and db

--- a/BookingWeb/BookingWeb/BookingWeb.csproj
+++ b/BookingWeb/BookingWeb/BookingWeb.csproj
@@ -159,6 +159,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
+    <Compile Include="Models\BookDetailDTO.cs" />
+    <Compile Include="Models\BookDTO.cs" />
     <Compile Include="Models\BookingWebContext.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
